--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
         </div>
     </nav>
 
+    <main class="container-md d-flex flex-column align-items-center">
+        <h2 class="mt-5 mb-2">Feedback</h2>
+        <p>Give us some super cool and positive feedback</p>
+
+        <form action="" method="post" class="my-4">
+            <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+            </div>
+              <div class="mb-3">
+                <label for="textarea" class="form-label">Feedback</label>
+                <textarea class="form-control" id="textarea" rows="3" placeholder="Enter your feedback..."></textarea>
+            </div>
+            <div class="mb-3">
+                <input type="submit" name="submit" value="Send" class="btn btn-dark w-100">
+            </div>
+        </form>
+    </main>
+
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
