--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         </form>
     </main>
 
+    <footer class="py-3 mt-4 bg-dark">
+        <p class="my-0 text-center text-white">&copy; 2022 Company, Inc</p>
+    </footer>
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
