--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <span class="navbar-brand mb-0 h1 text-white">Feedback App</span>
             <ul class="navbar-nav flex-row">
                 <li class="nav-item mx-4">
-                    <a class="nav-link text-white" href="#">Home</a>
+                    <a class="nav-link text-white" href="index.html">Home</a>
                 </li>
                 <li class="nav-item mx-4">
-                    <a class="nav-link text-white" href="#">Feedback</a>
+                    <a class="nav-link text-white" href="feedback.html">Feedback</a>
                 </li>
                 <li class="nav-item mx-4">
-                    <a class="nav-link text-white" href="#">About</a>
+                    <a class="nav-link text-white" href="about.html">About</a>
                 </li>
             </ul>
         </div>
@@ -53,9 +53,5 @@
     <footer class="py-3 mt-4 bg-dark">
         <p class="my-0 text-center text-white">&copy; 2022 Company, Inc</p>
     </footer>
-    <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 </body>
 </html>
